openproject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Додаємо це
  rules:
    - host: openproject.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openproject
                port:
                  number: 80
